--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Display</title>
+    <title>DAI6900</title>
     <style>
         body, html {
             margin: 0;
             padding: 0;
             display: flex;
+            flex-direction: column; /* Stack items vertically */
             justify-content: center;
             align-items: center;
             height: 100vh;
             background-color: #000;
+            color: #fff; /* Change text color to white */
         }
         img {
             max-width: 100%;
@@ -21,6 +23,7 @@
     </style>
 </head>
 <body>
-    <img src="header.png" alt="Animals and Text Image">
+    <h1>CTO</h1>
+    <img src="header.png" alt="DAI6900">
 </body>
 </html>
