--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DAI6900</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet"> <!-- Google Font -->
     <style>
         body, html {
             margin: 0;
@@ -13,17 +14,26 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #000;
-            color: #fff; /* Change text color to white */
+            background-color: #1a1a1a; /* Dark gray background */
+            color: #f0f0f0; /* Light text color */
+            font-family: 'Montserrat', sans-serif; /* Applying the new font */
+            text-align: center; /* Center align text */
+        }
+        h1 {
+            font-size: 2.5rem; /* Increase font size for the heading */
+            margin-bottom: 20px; /* Space below heading */
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Subtle text shadow */
         }
         img {
-            max-width: 100%;
-            max-height: 100%;
+            max-width: 90%; /* Responsive image, maximum 90% of viewport */
+            max-height: 80%; /* Keep image within viewport */
+            border-radius: 10px; /* Rounded corners for the image */
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5); /* Shadow effect for the image */
         }
     </style>
 </head>
 <body>
-    <h1>CTO</h1>
+    <h1>Death Animal Index</h1>
     <img src="header.png" alt="DAI6900">
 </body>
 </html>
