--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             color: #f0f0f0; /* Light text color */
             font-family: 'Montserrat', sans-serif; /* Applying the new font */
             text-align: center; /* Center align text */
+            position: relative; /* Allow positioning of child elements */
         }
         h1 {
             font-size: 2.5rem; /* Increase font size for the heading */
@@ -30,9 +31,30 @@
             border-radius: 10px; /* Rounded corners for the image */
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5); /* Shadow effect for the image */
         }
+        .top-left-container {
+            position: absolute; /* Position it relative to the nearest positioned ancestor */
+            top: 20px; /* Distance from the top */
+            left: 20px; /* Distance from the left */
+            display: flex; /* Use flexbox to align items */
+            align-items: center; /* Center items vertically */
+        }
+        .top-left-image {
+            width: 100px; /* Set a specific width for the top-left image */
+            height: auto; /* Maintain aspect ratio */
+            margin-right: 10px; /* Space between image and text */
+        }
+        .top-left-text {
+            font-size: 1.2rem; /* Font size for the text */
+            color: #f0f0f0; /* Ensure text color is white */
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Optional shadow for text */
+        }
     </style>
 </head>
 <body>
+    <div class="top-left-container">
+        <img src="DAI6900.png" alt="Top Left Image" class="top-left-image"> <!-- New top-left image -->
+        <span class="top-left-text">CA: G3MeKadE73Q8dQkQAXWdD2i2BGzq6bSSJehPdH3Jpump</span> <!-- Text next to image -->
+    </div>
     <h1>Death Animal Index</h1>
     <img src="header.png" alt="DAI6900">
 </body>
