--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             flex-direction: column; /* Stack items vertically */
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh; /* Ensure the body takes up at least the full height */
             background-color: #1a1a1a; /* Dark gray background */
             color: #f0f0f0; /* Light text color */
             font-family: 'Montserrat', sans-serif; /* Applying the new font */
@@ -22,40 +22,79 @@
         }
         h1 {
             font-size: 2.5rem; /* Increase font size for the heading */
-            margin-bottom: 20px; /* Space below heading */
+            margin: 20px 0; /* Space above and below heading */
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Subtle text shadow */
         }
         img {
             max-width: 90%; /* Responsive image, maximum 90% of viewport */
-            max-height: 80%; /* Keep image within viewport */
+            max-height: 60%; /* Keep image within viewport */
             border-radius: 10px; /* Rounded corners for the image */
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5); /* Shadow effect for the image */
         }
         .top-left-container {
-            position: absolute; /* Position it relative to the nearest positioned ancestor */
-            top: 20px; /* Distance from the top */
-            left: 20px; /* Distance from the left */
             display: flex; /* Use flexbox to align items */
             align-items: center; /* Center items vertically */
+            flex-direction: column; /* Stack items vertically */
+            margin-top: 20px; /* Space above the container */
         }
         .top-left-image {
             width: 100px; /* Set a specific width for the top-left image */
             height: auto; /* Maintain aspect ratio */
-            margin-right: 10px; /* Space between image and text */
+            margin-bottom: 10px; /* Space below the image */
         }
         .top-left-text {
             font-size: 1.2rem; /* Font size for the text */
             color: #f0f0f0; /* Ensure text color is white */
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Optional shadow for text */
         }
+        .link-container {
+            display: flex; /* Use flexbox to align links */
+            align-items: center; /* Center items vertically */
+            margin-top: 20px; /* Space above the link container */
+        }
+        .telegram-link, .dexscreener-link {
+            font-size: 1.2rem; /* Font size for the link */
+            color: #00A2E5; /* Telegram color */
+            text-decoration: none; /* Remove underline */
+            transition: color 0.3s; /* Smooth color transition */
+            margin-right: 10px; /* Space between links */
+        }
+        .telegram-link:hover, .dexscreener-link:hover {
+            color: #0081B0; /* Darker shade on hover */
+        }
+        .separator {
+            width: 1px; /* Thickness of the separator */
+            height: 24px; /* Height of the separator */
+            background-color: #00A2E5; /* Color of the separator */
+            margin: 0 10px; /* Space around the separator */
+        }
+        footer {
+            margin-top: auto; /* Push footer to the bottom */
+            padding: 20px; /* Space around footer */
+            background-color: #333; /* Darker background for the footer */
+            color: #f0f0f0; /* Light text color for the footer */
+            width: 100%; /* Full width footer */
+            text-align: center; /* Center align text */
+            position: relative; /* For positioning */
+        }
     </style>
 </head>
 <body>
+    <h1>Death Animal Index</h1>
+    <img src="header.png" alt="DAI6900">
+    <div class="link-container">
+        <a href="https://t.me/DAI6900CTO" class="telegram-link" target="_blank">Join us on Telegram</a> <!-- Telegram link -->
+        <div class="separator"></div> <!-- Separator -->
+        <a href="https://dexscreener.com/solana/djpxxzdrwmjbnc1p9d2akyj21f38pgdz9ulkixkaqvma" class="dexscreener-link" target="_blank">Dexscreener</a> <!-- Dexscreener link -->
+    </div>
+
     <div class="top-left-container">
         <img src="DAI6900.png" alt="Top Left Image" class="top-left-image"> <!-- New top-left image -->
         <span class="top-left-text">CA: G3MeKadE73Q8dQkQAXWdD2i2BGzq6bSSJehPdH3Jpump</span> <!-- Text next to image -->
     </div>
-    <h1>Death Animal Index</h1>
-    <img src="header.png" alt="DAI6900">
+
+    <footer>
+        <p>&copy; 2024 DAI6900. All rights reserved.</p> <!-- Copyright text -->
+    </footer>
 </body>
 </html>
