--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Subtle text shadow */
         }
         img {
-            max-width: 90%; /* Responsive image, maximum 90% of viewport */
-            max-height: 60%; /* Keep image within viewport */
+            width: 90%; /* Responsive image, use 90% of the viewport width */
+            max-height: 60vh; /* Keep image within a maximum height of 60% of the viewport */
             border-radius: 10px; /* Rounded corners for the image */
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5); /* Shadow effect for the image */
         }
@@ -51,6 +51,7 @@
             display: flex; /* Use flexbox to align links */
             align-items: center; /* Center items vertically */
             margin-top: 20px; /* Space above the link container */
+            flex-wrap: wrap; /* Allow wrapping on smaller screens */
         }
         .telegram-link, .dexscreener-link {
             font-size: 1.2rem; /* Font size for the link */
@@ -58,6 +59,7 @@
             text-decoration: none; /* Remove underline */
             transition: color 0.3s; /* Smooth color transition */
             margin-right: 10px; /* Space between links */
+            margin-bottom: 10px; /* Space below the links for wrapping */
         }
         .telegram-link:hover, .dexscreener-link:hover {
             color: #0081B0; /* Darker shade on hover */
@@ -77,10 +79,35 @@
             text-align: center; /* Center align text */
             position: relative; /* For positioning */
         }
+
+        /* Responsive adjustments */
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 2rem; /* Decrease font size for smaller screens */
+            }
+            .top-left-image {
+                width: 80px; /* Smaller top-left image for mobile */
+            }
+            .top-left-text {
+                font-size: 1rem; /* Smaller font size for the text */
+            }
+            .telegram-link, .dexscreener-link {
+                font-size: 1rem; /* Smaller font size for the links */
+            }
+        }
+
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 1.5rem; /* Further decrease font size for very small screens */
+            }
+            img {
+                max-height: 50vh; /* Further reduce max height for images */
+            }
+        }
     </style>
 </head>
 <body>
-    <h1>Death Animal Index</h1>
+    <h1>Dead Animal Index</h1>
     <img src="header.png" alt="DAI6900">
     <div class="link-container">
         <a href="https://t.me/DAI6900CTO" class="telegram-link" target="_blank">Join us on Telegram</a> <!-- Telegram link -->
