--- a/index.html
+++ b/index.html
@@ -5,109 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DAI6900</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet"> <!-- Google Font -->
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column; /* Stack items vertically */
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh; /* Ensure the body takes up at least the full height */
-            background-color: #1a1a1a; /* Dark gray background */
-            color: #f0f0f0; /* Light text color */
-            font-family: 'Montserrat', sans-serif; /* Applying the new font */
-            text-align: center; /* Center align text */
-            position: relative; /* Allow positioning of child elements */
-        }
-        h1 {
-            font-size: 2.5rem; /* Increase font size for the heading */
-            margin: 20px 0; /* Space above and below heading */
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Subtle text shadow */
-        }
-        img {
-            width: 90%; /* Responsive image, use 90% of the viewport width */
-            max-height: 60vh; /* Keep image within a maximum height of 60% of the viewport */
-            border-radius: 10px; /* Rounded corners for the image */
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5); /* Shadow effect for the image */
-        }
-        .top-left-container {
-            display: flex; /* Use flexbox to align items */
-            align-items: center; /* Center items vertically */
-            flex-direction: column; /* Stack items vertically */
-            margin-top: 20px; /* Space above the container */
-        }
-        .top-left-image {
-            width: 100px; /* Set a specific width for the top-left image */
-            height: auto; /* Maintain aspect ratio */
-            margin-bottom: 10px; /* Space below the image */
-        }
-        .top-left-text {
-            font-size: 1.2rem; /* Font size for the text */
-            color: #f0f0f0; /* Ensure text color is white */
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Optional shadow for text */
-        }
-        .link-container {
-            display: flex; /* Use flexbox to align links */
-            align-items: center; /* Center items vertically */
-            margin-top: 20px; /* Space above the link container */
-            flex-wrap: wrap; /* Allow wrapping on smaller screens */
-        }
-        .telegram-link, .dexscreener-link {
-            font-size: 1.2rem; /* Font size for the link */
-            color: #00A2E5; /* Telegram color */
-            text-decoration: none; /* Remove underline */
-            transition: color 0.3s; /* Smooth color transition */
-            margin-right: 10px; /* Space between links */
-            margin-bottom: 10px; /* Space below the links for wrapping */
-        }
-        .telegram-link:hover, .dexscreener-link:hover {
-            color: #0081B0; /* Darker shade on hover */
-        }
-        .separator {
-            width: 1px; /* Thickness of the separator */
-            height: 24px; /* Height of the separator */
-            background-color: #00A2E5; /* Color of the separator */
-            margin: 0 10px; /* Space around the separator */
-        }
-        footer {
-            margin-top: auto; /* Push footer to the bottom */
-            padding: 20px; /* Space around footer */
-            background-color: #333; /* Darker background for the footer */
-            color: #f0f0f0; /* Light text color for the footer */
-            width: 100%; /* Full width footer */
-            text-align: center; /* Center align text */
-            position: relative; /* For positioning */
-        }
-
-        /* Responsive adjustments */
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 2rem; /* Decrease font size for smaller screens */
-            }
-            .top-left-image {
-                width: 80px; /* Smaller top-left image for mobile */
-            }
-            .top-left-text {
-                font-size: 1rem; /* Smaller font size for the text */
-            }
-            .telegram-link, .dexscreener-link {
-                font-size: 1rem; /* Smaller font size for the links */
-            }
-        }
-
-        @media (max-width: 480px) {
-            h1 {
-                font-size: 1.5rem; /* Further decrease font size for very small screens */
-            }
-            img {
-                max-height: 50vh; /* Further reduce max height for images */
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
 </head>
 <body>
-    <h1>Dead Animal Index</h1>
+    <h1>Death Animal Index</h1>
     <img src="header.png" alt="DAI6900">
     <div class="link-container">
         <a href="https://t.me/DAI6900CTO" class="telegram-link" target="_blank">Join us on Telegram</a> <!-- Telegram link -->
@@ -119,6 +20,65 @@
         <img src="DAI6900.png" alt="Top Left Image" class="top-left-image"> <!-- New top-left image -->
         <span class="top-left-text">CA: G3MeKadE73Q8dQkQAXWdD2i2BGzq6bSSJehPdH3Jpump</span> <!-- Text next to image -->
     </div>
+
+<div class="animal-container">
+    <h2>Animal Deaths</h2>
+    <div class="animal-entry">
+        <div class="frame frame1">
+            <img src="GrumpyCat.png" alt="GrumpyCat" class="animal-image">
+        </div>
+        <span class="animal-date">Grumpy Cat, Date of Death: 2012 - 2019</span>
+    </div>
+    <div class="animal-entry">
+        <div class="frame frame2">
+            <img src="KeyboardCat.png" alt="Animal 2" class="animal-image">
+        </div>
+        <span class="animal-date">Keyboard Cat, Date of Death: 1984 - 1987</span>
+    </div>
+    <div class="animal-entry">
+        <div class="frame frame3">
+            <img src="Gabe.png" alt="Animal 3" class="animal-image">
+        </div>
+        <span class="animal-date">Gabe the Dog, Date of Death: 2011 - 2017</span>
+    </div>
+    <div class="animal-entry">
+        <div class="frame frame4">
+            <img src="Cheems.png" alt="Animal 3" class="animal-image">
+        </div>
+        <span class="animal-date">Cheems, Date of Death: 2011 - 2023</span>
+    </div>
+    <div class="animal-entry">
+        <div class="frame frame5">
+            <img src="StaringHamster.png" alt="Animal 3" class="animal-image">
+        </div>
+        <span class="animal-date">Staring Hamster, Date of Death: 2019 - 2021</span>
+    </div>
+    <div class="animal-entry">
+        <div class="frame frame1">
+            <img src="Harambe.png" alt="Animal 3" class="animal-image">
+        </div>
+        <span class="animal-date">Harambe, Date of Death: 1999 - 2016</span>
+    </div>
+    <div class="animal-entry">
+        <div class="frame frame2">
+            <img src="Doge.png" alt="Animal 3" class="animal-image">
+        </div>
+        <span class="animal-date">Doge, Date of Death: 2005 - 2024</span>
+    </div>
+    <div class="animal-entry">
+        <div class="frame frame3">
+            <img src="Peanut.png" alt="Animal 3" class="animal-image">
+        </div>
+        <span class="animal-date">Peanut the Squirrel, Date of Death: 2017 - 2024</span>
+    </div>
+    <div class="animal-entry">
+        <div class="frame frame4">
+            <img src="fred.png" alt="Animal 3" class="animal-image">
+        </div>
+        <span class="animal-date">Fred the Racoon, Date of Death: dob unknown - 2024</span>
+    </div>
+</div>
+
 
     <footer>
         <p>&copy; 2024 DAI6900. All rights reserved.</p> <!-- Copyright text -->
