--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
 </head>
 <body>
-    <h1>Death Animal Index</h1>
+    <h1>Dead Animal Index</h1>
     <img src="header.png" alt="DAI6900">
     <div class="link-container">
         <a href="https://t.me/DAI6900CTO" class="telegram-link" target="_blank">Join us on Telegram</a> <!-- Telegram link -->
