--- a/index.html
+++ b/index.html
@@ -21,64 +21,63 @@
         <span class="top-left-text">CA: G3MeKadE73Q8dQkQAXWdD2i2BGzq6bSSJehPdH3Jpump</span> <!-- Text next to image -->
     </div>
 
-<div class="animal-container">
-    <h2>Animal Deaths</h2>
-    <div class="animal-entry">
-        <div class="frame frame1">
-            <img src="GrumpyCat.png" alt="GrumpyCat" class="animal-image">
+    <div class="animal-container">
+        <h2>Animal Deaths</h2>
+        <div class="animal-entry">
+            <div class="frame frame1">
+                <img src="GrumpyCat.png" alt="GrumpyCat" class="animal-image">
+            </div>
+            <span class="animal-date">Grumpy Cat, 2012 - 2019 🐱💔</span>
         </div>
-        <span class="animal-date">Grumpy Cat, Date of Death: 2012 - 2019</span>
-    </div>
-    <div class="animal-entry">
-        <div class="frame frame2">
-            <img src="KeyboardCat.png" alt="Animal 2" class="animal-image">
+        <div class="animal-entry">
+            <div class="frame frame2">
+                <img src="KeyboardCat.png" alt="Animal 2" class="animal-image">
+            </div>
+            <span class="animal-date">Keyboard Cat, 1984 - 1987 🎹😢</span>
         </div>
-        <span class="animal-date">Keyboard Cat, Date of Death: 1984 - 1987</span>
-    </div>
-    <div class="animal-entry">
-        <div class="frame frame3">
-            <img src="Gabe.png" alt="Animal 3" class="animal-image">
+        <div class="animal-entry">
+            <div class="frame frame3">
+                <img src="Gabe.png" alt="Animal 3" class="animal-image">
+            </div>
+            <span class="animal-date">Gabe the Dog, 2011 - 2017 🐶💔</span>
         </div>
-        <span class="animal-date">Gabe the Dog, Date of Death: 2011 - 2017</span>
-    </div>
-    <div class="animal-entry">
-        <div class="frame frame4">
-            <img src="Cheems.png" alt="Animal 3" class="animal-image">
+        <div class="animal-entry">
+            <div class="frame frame4">
+                <img src="Cheems.png" alt="Animal 3" class="animal-image">
+            </div>
+            <span class="animal-date">Cheems, 2011 - 2023 🐕✨</span>
         </div>
-        <span class="animal-date">Cheems, Date of Death: 2011 - 2023</span>
-    </div>
-    <div class="animal-entry">
-        <div class="frame frame5">
-            <img src="StaringHamster.png" alt="Animal 3" class="animal-image">
+        <div class="animal-entry">
+            <div class="frame frame5">
+                <img src="StaringHamster.png" alt="Animal 3" class="animal-image">
+            </div>
+            <span class="animal-date">Staring Hamster, 2019 - 2021 🐹💔</span>
         </div>
-        <span class="animal-date">Staring Hamster, Date of Death: 2019 - 2021</span>
-    </div>
-    <div class="animal-entry">
-        <div class="frame frame1">
-            <img src="Harambe.png" alt="Animal 3" class="animal-image">
+        <div class="animal-entry">
+            <div class="frame frame1">
+                <img src="Harambe.png" alt="Animal 3" class="animal-image">
+            </div>
+            <span class="animal-date">Harambe, 1999 - 2016 🦍💔</span>
         </div>
-        <span class="animal-date">Harambe, Date of Death: 1999 - 2016</span>
-    </div>
-    <div class="animal-entry">
-        <div class="frame frame2">
-            <img src="Doge.png" alt="Animal 3" class="animal-image">
+        <div class="animal-entry">
+            <div class="frame frame2">
+                <img src="Doge.png" alt="Animal 3" class="animal-image">
+            </div>
+            <span class="animal-date">Doge, 2005 - 2024 🐕❤️</span>
         </div>
-        <span class="animal-date">Doge, Date of Death: 2005 - 2024</span>
-    </div>
-    <div class="animal-entry">
-        <div class="frame frame3">
-            <img src="Peanut.png" alt="Animal 3" class="animal-image">
+        <div class="animal-entry">
+            <div class="frame frame3">
+                <img src="Peanut.png" alt="Animal 3" class="animal-image">
+            </div>
+            <span class="animal-date">Peanut the Squirrel, 2017 - 2024 🐿️💔</span>
         </div>
-        <span class="animal-date">Peanut the Squirrel, Date of Death: 2017 - 2024</span>
-    </div>
-    <div class="animal-entry">
-        <div class="frame frame4">
-            <img src="fred.png" alt="Animal 3" class="animal-image">
+        <div class="animal-entry">
+            <div class="frame frame4">
+                <img src="fred.png" alt="Animal 3" class="animal-image">
+            </div>
+            <span class="animal-date">Fred the Raccoon, dob unknown - 2024 🦝💔</span>
         </div>
-        <span class="animal-date">Fred the Racoon, Date of Death: dob unknown - 2024</span>
     </div>
-</div>
-
 
     <footer>
         <p>&copy; 2024 DAI6900. All rights reserved.</p> <!-- Copyright text -->
