--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="animal-container">
-        <h2>Animal Deaths</h2>
+        <h2>Tribute to our fallen soldiers:</h2>
         <div class="animal-entry">
             <div class="frame frame1">
                 <img src="GrumpyCat.png" alt="GrumpyCat" class="animal-image">
