--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <div class="link-container">
         <a href="https://t.me/DAI6900CTO" class="telegram-link" target="_blank">Join us on Telegram</a> <!-- Telegram link -->
         <div class="separator"></div> <!-- Separator -->
+        <a href="https://x.com/dai6900" class="x-link" target="_blank">Follow us on X</a> <!-- Dexscreener link -->
+        <div class="separator"></div> <!-- Separator -->
         <a href="https://dexscreener.com/solana/djpxxzdrwmjbnc1p9d2akyj21f38pgdz9ulkixkaqvma" class="dexscreener-link" target="_blank">Dexscreener</a> <!-- Dexscreener link -->
     </div>
 
