--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DAI6900</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon"> <!-- Link to the favicon -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet"> <!-- Google Font -->
     <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
 </head>
